style: 컨텐츠 이미지 경로 개편

--- a/public/docs/articles/2024-07-10.md
+++ b/public/docs/articles/2024-07-10.md
@@ -40,7 +40,7 @@
 <br />
 <br />
 
-<img src="/public/images/content/2024-07-10__xss-example.png" alt="XSS 공격 예시" width="1280" height="430" />
+<img src="/public/images/contents/2024-07-10/xss-example.png" alt="XSS 공격 예시" width="1280" height="430" />
 
 <br />
 
@@ -75,7 +75,7 @@
 
 ## 그래서 어떻게 구현했나?
 
-<img src="/public/images/content/2024-07-10__login-flow.png" alt="로그인 플로우 차트" width="1280" height="586" />
+<img src="/public/images/contents/2024-07-10/login-flow.png" alt="로그인 플로우 차트" width="1280" height="586" />
 
 <br />
 
@@ -89,7 +89,7 @@
 
 ### 쿠키도 위험한거 아니었나?
 
-브라우저에서 기본적으로 작동되는 쿠키는 사실 `XSS`공격에 취약하지만 특정 옵션을 통해 취약점들을 최대한 보완할 수 있습니다
+브라우저에서 기본적으로 작동되는 쿠키는 사실 `XSS`공격에 취약하지만 특정 옵션을 통해 취약점들을 최대한 보완할 수 있습니다.
 
 <br />
 
@@ -104,7 +104,7 @@
 
 <br />
 
-<img src="/public/images/content/2024-07-10__cookie-options.png" alt="적용한 쿠키 옵션 예시" width="1280" height="94" />
+<img src="/public/images/contents/2024-07-10/cookie-options.png" alt="적용한 쿠키 옵션 예시" width="1280" height="94" />
 
 <br />
 
@@ -375,7 +375,7 @@ export default function MyPage() {
 
 <br />
 
-<img src="/public/images/content/2024-07-10__need-login-fallback.png" alt="WithAuth 결과 UI" width="1280" height="609" />
+<img src="/public/images/contents/2024-07-10/need-login-fallback.png" alt="WithAuth 결과 UI" width="1280" height="609" />
 
 <br />
 <br />
