--- a/public/docs/articles/2024-12-31.md
+++ b/public/docs/articles/2024-12-31.md
@@ -2,7 +2,7 @@
 
 이번 연도부터 회고를 쓰게 된 관계로 2024년 이전을 간단하게만 돌아보겠습니다.
 
-개발과는 상관이 없는 이야기가 많으니 넘어가실 분은 [구름톤 트레이닝 풀스택 6회차](#구름톤-트레이닝-풀스택-6회차)부터 보셔도 좋을 것 같습니다.
+개발과는 상관이 없는 이야기가 많으니 넘어가실 분은 [퇴사 및 새로운 도전](#퇴사-및-새로운-도전)부터 보셔도 좋을 것 같습니다.
 
 <br />
 <br />
@@ -127,6 +127,14 @@
 <br />
 <br />
 
+### 개발 직무를 도전하게 된 배경
+
+저는 처음 [디자인 분야를 선택했던 이유](#시각디자인을-배우게-된-계기)도 남에게 제 작업물을 보여주는 것이 좋아서 선택했던 일이었습니다. 정확히는 막연히 제가 좋아하는 것 같은 분야를 선택했던 것이었죠. 하지만 회사에서 했던 몇가지 경험으로 인해 조금씩 저를 더 구체적으로 알게되었습니다.
+
+<br />
+<br />
+<br />
+
 ## 구름톤 트레이닝 풀스택 6회차
 
 <img src="https://github.com/Team-VOTalks/VOTalks-FE/blob/main/public/img/ad/votalks-ad-1.jpg?raw=true" alt="구름톤 트레이닝 인트로" width="1464" height="695" />
@@ -155,23 +163,23 @@
 
 <br />
 
-<img src="/public/images/content/2024-12-31__jasmine-0.jpg" alt="스터디 모집 공고" width="1569" height="1205" />
+<img src="/public/images/contents/2024-12-31/jasmine-0.jpg" alt="스터디 모집 공고" width="1569" height="1205" />
 
 <br />
 
-<img src="/public/images/content/2024-12-31__jasmine-1.jpg" alt="스터디 소개글" width="1470" height="743" />
+<img src="/public/images/contents/2024-12-31/jasmine-1.jpg" alt="스터디 소개글" width="1470" height="743" />
 
 <br />
 
-<img src="/public/images/content/2024-12-31__jasmine-2.jpg" alt="스터디 목표" width="1470" height="1118" />
+<img src="/public/images/contents/2024-12-31/jasmine-2.jpg" alt="스터디 목표" width="1470" height="1118" />
 
 <br />
 
-<img src="/public/images/content/2024-12-31__jasmine-3.jpg" alt="스터디 운영 방식" width="1470" height="1143" />
+<img src="/public/images/contents/2024-12-31/jasmine-3.jpg" alt="스터디 운영 방식" width="1470" height="1143" />
 
 <br />
 
-<img src="/public/images/content/2024-12-31__jasmine-4.jpg" alt="스터디 노션 페이지" width="1470" height="1452" />
+<img src="/public/images/contents/2024-12-31/jasmine-4.jpg" alt="스터디 노션 페이지" width="1470" height="1452" />
 
 <br />
 
@@ -180,6 +188,26 @@
 <br />
 
 하지만 사람들을 모아서 스터디를 진행한다는 것은 생각보다 힘든 일이었습니다. 인원이 너무 많을 경우 원활한 진행이 어렵다고 판단하여 모집 과정에서 저 포함 5명을 확정하였지만, 극 초기에 스터디 OT를 진행한 후 한 분이 자진 하차를 하셨고, 중간에는 또 한 분이 앱 개발이 적성에 맞는다고 하셔서 구름톤 트레이닝 과정을 하차하시게 되어 종래에는 저 포함 3명 밖에 남지 않았었습니다. 또한 회의록도 전부 혼자 작성하고 스터디 관리도 혼자 하며 피로감이 누적되기도 해서 결론적으로는 2차 스터디까지 이어나가지 못했고, 2차 스터디 기간 때는 프론트엔드 기술 공부에 조금 더 집중하고 싶기도 해서 완장을 내려놓고 초청 받은 다른 알고리즘 스터디에 가게 되었습니다.
+
+<br />
+
+아래는 진행했었던 내용들입니다. 이슈트래커는 만들었는데 딱히 활성화는 되지 않았던게 조금 아쉽네요.
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/jasmine-5.jpg" alt="스터디 일일 문제풀이 과제 데이터베이스" width="1440" height="1224" />
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/jasmine-6.jpg" alt="스터디 일일 TIL 데이터베이스" width="1440" height="972" />
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/jasmine-7.jpg" alt="스터디 일일 회의록 데이터베이스" width="1440" height="1122" />
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/jasmine-8.jpg" alt="스터디 이슈트래커 데이터베이스" width="1530" height="1404" />
 
 <br />
 <br />
@@ -202,7 +230,7 @@
 | 2 | 깃허브 파인더 | Vanilla JS, GitHub API | [GitHub](https://github.com/LC-02s/PBL-GitHub-Finder) |
 | 3 | 스프레드 시트 | Vanilla JS | [GitHub](https://github.com/LC-02s/PBL-Spread-Sheet) |
 | 4 | 지출 계산기 | React, Chart, JS | [GitHub](https://github.com/LC-02s/PBL-Account-Book) |
-| 5 | 쇼핑몰 앱 | React, Redux, JS | [GitHub](https://github.com/LC-02s/PBL-Shopping-Mall) |
+| 5 | 쇼핑몰 앱 | React, Redux, JS, Open API | [GitHub](https://github.com/LC-02s/PBL-Shopping-Mall) |
 | 6 | [노트 앱](https://pbl-notes.netlify.app) | React, Redux, TS | [GitHub](https://github.com/LC-02s/PBL-Notes) |
 
 <br />
@@ -214,7 +242,7 @@
 
 <br />
 
-멘토링을 받으면서 정말 감명깊었던 경험이 있었는데 PBL 과제 중 리덕스로 장바구니 기능을 구현하는 것이 잘 안되어 멘토링을 받으러 갔었던 적이 있었습니다. 당시 장바구니에 상품을 담는 과정에서 `Reducer`를 통해 새로운 액션을 받아 연산을 거친 후 새로운 상태를 반환하는 과정에서 상태가 의도한대로 갱신이 되지 않는 문제가 있었습니다. 과제 마감이 임박해오는 촉박한 시간 속에 해당 문제로 하루 종일 찾아봐도 답이 나오지 않아 처음으로 과제를 마치기 전에 멘토링을 받으러 갔었는데, 당시 백엔드 코치님께서 제 코드를 직접 로컬에서 실행까지 해가며 문제를 같이 찾아 주셨고, 그 덕분에 빠르게 문제를 해결할 수 있었던 것은 물론이고 그 과정에서 정말 많이 배울 수 있었던 것 같습니다. 저는 당시까지만 해도 혼자서 머리 싸매고 어떻게든 해결해 내는 것을 덕목으로 여겼었지만 다른 사람의 도움을 받을 수 있는 환경이라면 오히려 도움을 받아서라도 빠르게 해결 후 내 것으로 만들어 성장하는 것을 덕목으로 삼아야겠다는 생각을 하게 되었습니다.
+멘토링을 받으면서 정말 감명깊었던 경험이 있었는데 PBL 과제 중 리덕스로 장바구니 기능을 구현하는 것이 잘 안되어 멘토링을 받으러 갔었던 적이 있었습니다. 당시 장바구니에 상품을 담는 과정에서 `Reducer`를 통해 새로운 액션을 받아 연산을 거친 후 새로운 상태를 반환하는 과정에서 상태가 의도한대로 갱신이 되지 않고 일부만 갱신되는 문제가 있었습니다. 과제 마감이 임박해오는 촉박한 시간 속에 해당 문제로 하루 종일 찾아봐도 답이 나오지 않아 처음으로 과제를 마치기 전에 멘토링을 받으러 갔었는데, 당시 백엔드 코치님께서 제 코드를 직접 로컬에서 실행까지 해가며 문제를 같이 찾아 주셨고, 그 덕분에 빠르게 문제를 해결할 수 있었던 것은 물론이고 그 과정에서 정말 많이 배울 수 있었던 것 같습니다. 저는 당시까지만 해도 혼자서 머리 싸매고 어떻게든 해결해 내는 것을 덕목으로 여겼었지만 다른 사람의 도움을 받을 수 있는 환경이라면 오히려 도움을 받아서라도 빠르게 해결 후 내 것으로 만들어 성장하는 것을 덕목으로 삼아야겠다는 생각을 하게 되었습니다.
 
 <br />
 
@@ -224,16 +252,18 @@
 
 <br />
 
-<img src="/public/images/content/2024-12-31__redux-immer-memo-1.jpg" alt="리덕스 immer 문제 개요" width="1476" height="1326" />
+<img src="/public/images/contents/2024-12-31/redux-immer-memo-1.jpg" alt="리덕스 immer 문제 개요" width="1476" height="1326" />
 
 <br />
 
-<img src="/public/images/content/2024-12-31__redux-immer-memo-2.jpg" alt="리덕스 immer 문제 개선 코드" width="1476" height="1002" />
+<img src="/public/images/contents/2024-12-31/redux-immer-memo-2.jpg" alt="리덕스 immer 문제 개선 코드" width="1476" height="1002" />
 
 <br />
 <br />
 
 ### 모각코 스터디
+
+여느 때와 같이 멘토링을 받고 돌아가는 길에 같은 6회차 플레이어 분(이하 어트랙션 팀장님)의 권유로 직접 운영하시는 모각코 스터디에 합류하게 되었습니다. 구름에서 지원하는 ZEP에서 정규 교육시간을 마친 후 저녁시간에 약 2시간 + ⍺ 의 시간 동안 모두 캠을 켜고 각자 할 일을 하며 동기 부여를 얻는 형식의 스터디였습니다. 한 달에 1번 다 같이 온라인에서 각자의 회고를 발표하며 피드백을 주고 받는 형식의 회고도 진행했고, 비정기적으로 오프라인 모각코와 세션 발표 행사도 진행했었습니다. 당시에는 이렇게 길게 갈 거라고는 생각을 못 했었지만 현재까지 1년 정도 꾸준히 참여하고 있습니다. 당시 만났던 인연들 덕분에 여러모로 공부에 도움도 많이 됐었고, 앞으로 다룰 여러 가지 활동에도 참여해 볼 수 있었던 것 같습니다. 스터디를 진행했던 기록은 [모각코 스터디 관리 GitHub](https://github.com/Dev-Explorers/mogakko-2024)에 누적하고 있습니다.
 
 <br />
 <br />
@@ -244,12 +274,48 @@
 
 <br />
 
-프론트엔드 개발자로 참여한 첫 팀 프로젝트이며, 동시에 가장 아쉬움이 많이 남는 프로젝트입니다.
+프론트엔드 개발자로 참여한 첫 팀 프로젝트이며, 동시에 가장 많은 아쉬움이 남는 프로젝트입니다.
+
+<br />
+
+프로젝트의 시작은 [모각코 스터디](#모각코-스터디) 참여를 권유받았던 날이었습니다. 구름에서는 지원하는 스터디 기간이 끝나면 바로 1차와 2차로 나뉘어진 프로젝트 기간을 주었습니다. 1차 프로젝트는 구름에서 정한 주제인 WEB IDE 만들기 였고, 2차 프로젝트는 자유 주제였습니다. 저희 팀장님은 1차 프로젝트는 연습 느낌이기에 가볍게 넘기고 2차 프로젝트부터가 진짜 실전이니 일찍부터 준비해나가자는 나름의 획기적인 생각을 가지고 계셨습니다. 또한 서비스를 실제로 운영하며 유저의 피드백을 받고 제품을 개선해보는 것 까지를 목표로 잡았어서 당시 팀장님은 일찍부터 레퍼런스 수집과 함께 과정 내에서 열심히 하시는 분들을 찾으며 팀 빌딩을 해오고 계셨고, 디자이너 출신이라는 제 경력이 마음에 드셨는지 스카우트를 받게 되었습니다. 당시 트레이닝 과정 시작한지 2달 정도 되었는데 바로 마지막 프로젝트를 기획하는 시도는 저희 팀 뿐이었습니다.
+
+<br />
+
+모각코 스터디를 통한 약 2주간의 성실성 증명을 거쳐 팀에 합류하게 되었습니다. 물론 프로젝트를 일찍 시작하긴 했었지만 그렇다고 올인하는 느낌은 아니었기에 약 2달 정도의 기간 동안 개인 공부를 진행하며 프로젝트 레퍼런스를 수집하다가 24년 4월 부터 본격적인 기획과 함께 프로젝트를 시작하였습니다. 팀은 최종적으로 저 포함 6회차 5명, 7회차 1명으로 총 인원 6명에 프론트/백엔드 반반의 비율로 구성되었습니다. 물론 시작부터 쉽지 않긴 했었습니다. 사공이 많다보니 배가 산으로 갈 때가 많았죠. 그래도 나름 정석적으로 시도하려고 노력했던 것 같습니다. 기획도 피그잼을 활용해서 상황별 레퍼런스와 함께 시각적인 자료를 통해 설명하며 최대한 의견차이를 줄일려고 노력했고, 디자인은 제가 전부 전담하여 시안도 만들었습니다.
 
 <br />
 <br />
 
-### 어트랙션 디자인 시스템
+아래는 피그잼과 피그마를 활용하여 진행했었던 기획 단계와 디자인 단계의 산출물을 캡처한 이미지입니다. (제가 작업했던 것만 캡처했습니다.)
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/attraction-figma.png" alt="어트랙션 기획 및 디자인 프로세스 관련 피그마" width="1920" height="1400" />
+
+<br />
+
+초기 기획에 많은 공을 들였고, 큰 포부로 시작했던 프로젝트이지만 아쉽게도 결과는 좋지 못하였습니다. 예상하지 못한 변수들이 너무 많았죠. 처음에는 기존 시장에서 가장 많은 파이를 가지고 있던 [헤이버니](https://www.heybunny.io/)라는 서비스를 참고하여 메일 서버를 구축하려고 했었습니다. 회원가입 후 저희 서비스에서 제공한 이메일을 통해 뉴스레터를 구독하면 해당 이메일으로 받은 뉴스레터 데이터들을 토대로 여러 편의 서비스를 제공할 계획이였죠. 하지만 가장 큰 문제는 메일 서버 운영 비용이었습니다. 당시 서비스 운영을 위한 비용처리로 인당 월에 2만원 정도를 상한선으로 두고 있었는데 그 상한선을 아득히 뛰어넘는 금액이 필요했던 것이었죠.
+
+<br />
+
+그 대안으로 찾았던 방법이 Gmail API였습니다. Naver 메일 API는 마찬가지로 비용 문제 때문에 사용하지 못했습니다. 서비스 방향성 자체를 Gmail 써드파티 서비스로 틀게 되었죠. 하지만 또 문제가 생겼었습니다. 저희 서비스는 사용자의 이메일에 대한 모든 접근 권한을 필요로 했었기 때문에 **CASA Tier 2**라는 클라우드 애플리케이션 보안 평가를 만족했어야 했습니다. 인증을 받지 않아도 서비스를 운영할 수는 있었지만 인증이 없을 경우 유저가 회원가입을 시도할 시 아래와 같은 UI를 마주하게 되었습니다.
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/attraction-casa-tier-2.png" alt="확인되지 않은 앱 - Google에서 아직 확인하지 않은 앱입니다. 개발자를 알고 있으며 신뢰할 수 있는 경우에만 진행하세요." width="1270" height="578" />
+
+<br />
+
+B2C 서비스를 운영해야하는 입장에서 최악의 상황이었죠. 해결책을 찾아보니 등급을 받기 위해 직접 서버 측 코드를 요구사항대로 수정하거나 업체에 의뢰하는 방식을 추천하였습니다. 하지만 직접 요구사항을 만족시키는 것은 상당히 어려운 일이었습니다. 테스트 후 인증을 받는 평균 기간이 3\~6개월 정도 걸리는 것도 큰 문제 중 하나였죠. 업체도 사실 고려할만한 수준이 아니었습니다. 비용으로 약 25,000달러를 요구했죠. 그래도 당시 할 수 있는 방법은 다 시도해봤었던 것 같습니다. 국내 개발자 분 중 링크드인에 인증을 완료한 후기를 적어주신 분이 있어 그 분과 컨택을 시도도 했었지만 답장은 오지 않았었습니다.
+
+<br />
+
+그렇게 마지막 프로젝트 발표와 함께 트레이닝 과정 수료 후 추가적인 개선 작업을 해오다 위의 이슈로 백엔드 측의 진척도가 줄어들며 가장 중요한 이슈를 해결하지 못해 프로젝트가 흐지부지 되었습니다. 결국 초기에 설정했던 목표인 서비스를 운영하며 유저의 피드백을 받아 제품을 개선해보는 것은 이루지 못했고 서비스 구축 선에서 끝나게 되었죠. 지금 와서 회고하자면 협업의 방식도 문제가 많았고, 기술적인 문제 또한 만만치 않게 많았던 것 같습니다. 개발 일정에 급급하여 문서화를 너무 등한시 하였고, 프로젝트를 관리해보고자 도입했던 지라는 티켓 발급기가 됐으며, 리뷰를 통한 제품 개선은 시도조차 못 했었습니다. 당연히 작성한 코드의 퀄리티는 심각했었죠. 그래도 지금 생각해 보면 당시의 실패가 있어서 협업은 어떻게 해야 하는구나의 생각이 어느 정도 정리된 것 같습니다.
+
+<br />
+
+여기서 다루지 못한 기술적인 내용은 [어트랙션 서비스 운영 실패 회고](/blog/2025-01-15)글에서 따로 다뤄보도록 하겠습니다.
 
 <br />
 <br />
@@ -260,6 +326,12 @@
 
 <br />
 
+한참 어트랙션 프로젝트 개선 작업을 하던 도중 어트랙션 팀장님께서 밋업 행사 기획을 하나 가져오셨습니다. 원래 진행하던 [모각코 스터디](#모각코-스터디)의 오프라인 모각코 행사와 다르게 이번에는 구름의 지원을 받아 장소를 대여받고 참여자 모집도 따로 하여 이전에 진행했던 규모보다 조금 더 큰 규모의 밋업을 진행할 예정이라, 해당 행사의 기획과 함께 홍보용 랜딩 페이지 개발을 부탁하셨습니다. 행사의 주요 골자는 열심히 하시는 분들을 위주로 참가자 지원을 받아 세션 발표를 진행한 후 참여자들과 상호 피드백을 주고 받으며 성장할 수 있는 자리를 마련하고, 동시에 취업 준비 관련 정보도 상호 공유하는 목적이었습니다.
+
+<br />
+
+저는 기존에 좋아했었던 `Scroll-Linked` 애니메이션 기법을 활용한 인터랙티브 웹을 리액트로 구현해보고 싶기도 했었고, 다른 사람들 앞에서 발표를 진행해보는 것도 흔치 않은 기회인 것 같아 바로 수락했습니다. 당시 가용할 수 있는 시간도 얼마 없어서 바로 사이트 개발을 착수했었는데 결국 구름 측과의 원만한 협의를 하지 못해 대관에 실패했고, 그렇게 행사는 없던 일이 되었습니다. 상세한 내용은 [해당 글](/blog/2024-11-16)에서 확인하실 수 있습니다.
+
 <br />
 <br />
 
@@ -268,9 +340,35 @@
 <br />
 <br />
 
+### 진행했던 미션 모음
+
+| 순서 | 이름 | 링크 |
+| :-: | :-: | :-: |
+| 1 | 문자열 덧셈 계산기 | [GitHub](https://github.com/LC-02s/javascript-calculator-7/tree/LC-02s) |
+| 2 | 자동차 경주 | [GitHub](https://github.com/LC-02s/javascript-racingcar-7/tree/LC-02s) |
+| 3 | 로또 | [GitHub](https://github.com/LC-02s/javascript-lotto-7/tree/LC-02s) |
+| 4 | 편의점 | [GitHub](https://github.com/LC-02s/javascript-convenience-store-7-LC-02s) |
+
+<br />
+<br />
+
+아래는 각 미션별 테스트 코드 실행 결과입니다.
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/woowacourse-result.jpg" alt="우테코 프리코스 FE 7기 미션 결과 모음" width="1280" height="2216" />
+
+<br />
+<br />
+
 ## 테오의 스프린트 18기
 
-어트랙션 팀장님의 추천으로 테오의 스프린트 18기에 합류하게 되었습니다. 어트랙션 프로젝트 초기 단계에 팀장님께서 해당 스프린트의 프로세스를 일부분 도입하셨어서 이전부터 관심을 가지고 있기도 했었고, 개인적으로도 협업경험이 너무 부족한 것 같아 보충할 수 있는 좋은 기회라고 생각하여 모집 공고를 보자마자 바로 신청했었던 것 같습니다. 빨리 신청한 덕분에 다행이도 마감 커트라인 안에 들어 12/03 부터 12/09 까지 약 1주일간의 스프린트를 시작할 수 있었습니다.
+우테코 프리코스가 끝나고 간단하게 지금까지 했던 프로젝트들을 리팩토링하고 있다가 어트랙션 팀장님의 추천으로 테오의 스프린트 18기에 합류하게 되었습니다. 어트랙션 프로젝트 초기 단계에 팀장님께서 해당 스프린트의 프로세스를 일부분 도입하셨어서 이전부터 관심을 가지고 있기도 했었고, 개인적으로도 협업경험이 너무 부족한 것 같아 보충할 수 있는 좋은 기회라고 생각하여 모집 공고를 보자마자 바로 신청했었던 것 같습니다. 빨리 신청한 덕분에 다행이도 마감 커트라인 안에 들어 12/03 부터 12/09 까지 약 1주일간의 스프린트를 시작할 수 있었습니다.
+
+<br />
+<br />
+
+### 협업 프로세스
 
 <br />
 <br />
@@ -286,12 +384,26 @@
 <br />
 <br />
 
+아래는 당시 피그마로 만들었던 부적 템플릿입니다.
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/charm-templates.jpg" alt="응참잘 초기 부적 템플릿 피그마 파일 캡처" width="1200" height="568" />
+
+<br />
+<br />
+<br />
+
 ## 2024년 총평
+
+고등학교 졸업 후 계속 일만 하다 처음으로 긴 시간 동안 다른 준비 시간을 가져봤었던 것 같습니다. 이렇게 정리해보니 되게 많은 일을 한 것 같네요. 개인적인 생각으로는 전반적인 분야에서 많이 성장했다고 생각하지만 아쉬운 점들이 많이 보였던 것 같습니다.
 
 <br />
 <br />
 
 ## 2025년 목표
+
+2025년에 꼭 이루고 싶은 목표들만 추려보았습니다.
 
 <br />
 
@@ -308,26 +420,28 @@
 
 ### 2. 산업기능요원
 
+현재 24년 6월 중순 쯤 소집된 사회복무요원 복무를 1년 정도 미뤄둔 상태입니다. 신청을 통해 1년 정도 더 미룰 수 있긴하지만 가용할 수 있는 시간이 얼마 되지 않아 2025년 부터는 본격적으로 산업기능요원으로의 전직을 노려봐야 할 것 같습니다. 안되면 할 수 없는 일이지만 주어진 시간 동안은 할 수 있는 최선을 다해보고 그래도 안된다면 다시 고향으로 돌아가서 사회복무요원 소집에 응해야 할 것 같습니다.
+
 <br />
 <br />
 
 ### 3. 서울 상경 및 자취
 
-저는 지금까지 자취를 한 번도 해보지 않았습니다. 회사를 다닐 때도 본가에서 출퇴근했었구요.
+저는 지금까지 자취를 한 번도 해보지 않았습니다. 회사를 다닐 때도 본가에서 출퇴근했었구요. 그래서 그런지 타지에 집을 알아본다는 것이 이렇게 힘든 일인 줄은 몰랐습니다. 일단 관악구 쪽에 원룸형 고시원으로 찾아보고 나중에 회사가 정해지면 그때 다시 한번 집을 알아볼 계획입니다.
 
 <br />
 <br />
 
-### 4. 백엔드 및 데이터베이스 공부
+### 4. 백엔드 및 데이터베이스 공부 (+ 인프라)
 
-프론트엔드도 잘 못하면서 갑자기 왠 백엔드냐 하실 수 있습니다.
+프론트엔드도 잘 못하면서 갑자기 무슨 백엔드고 인프라냐 하실 수 있습니다만, 지금까지 프로젝트를 수행하며 느낀 제 단편적인 경험으로는 얕더라도 넓게 아는 것이 중요하다고 생각되었습니다. 프론트엔드 쪽은 그래도 1년 정도 하며 어느정도 감은 잡았다고 생각하지만 백엔드나 데이터베이스, 인프라 쪽은 아직 너무 많이 모른다는 생각이 들어 시간을 내서 얕게라도 공부해봐야할 것 같습니다.
 
 <br />
 <br />
 
 ## 마무리
 
-한 번에 몰아서 회고를 적으니 너무 어렵네요. 앞으로는 제때제때 정리해야 할 것 같습니다.
+한 번에 몰아서 회고를 적으니 너무 어렵네요. 앞으로는 제때제때 정리해야 할 것 같고, 기록하는 습관을 계속 들여나가야겠습니다.
 
 <br />
 
