docs: 블로그 글 업데이트

--- a/public/docs/articles/2024-12-31.md
+++ b/public/docs/articles/2024-12-31.md
@@ -129,9 +129,25 @@
 
 ### 개발 직무를 도전하게 된 배경
 
-저는 처음 [디자인 분야를 선택했던 이유](#시각디자인을-배우게-된-계기)도 남에게 제 작업물을 보여주는 것이 좋아서 선택했던 일이었습니다. 정확히는 막연히 제가 좋아하는 것 같은 분야를 선택했던 것이었죠. 하지만 회사에서 했던 몇가지 경험으로 인해 조금씩 저를 더 구체적으로 알게되었습니다.
+저는 처음 [디자인 분야를 선택했던 이유](#시각디자인을-배우게-된-계기)도 남에게 제 작업물을 보여주는 것이 좋아서 선택했던 일이었습니다. 정확히는 막연히 제가 좋아하는 것 같은 분야를 선택했던 것이었죠. 하지만 회사에서 했던 몇가지 경험으로 인해 조금씩 제가 무엇을 좋아하는지 더욱 구체적으로 알게되었습니다.
 
 <br />
+
+일례로 자동차 부품 제조회사의 사내 임직원 평가 시스템을 구축하는 프로젝트에 투입되었던 적이 있었습니다. 해당 프로젝트는 회사에서 처음으로 기획 프로세스를 접해본 프로젝트였습니다. 동시에 처음으로 외부 미팅을 나가서 클라이언트와 직접적으로 소통해 본 프로젝트이기도 하죠. 담당 개발자분 2명과 직접 미팅을 다니며 요구사항을 분석한 후 기획 관련 문서 작성과 함께 UI 디자인을 담당했습니다. 당시 처음으로 와이어프레임이라는 산출물을 만들어 보았는데 신세계를 느꼈던 것 같습니다. 힘들게 분석한 요구사항으로 UI에 대한 설계서를 작성한 후 디자인을 통해 사용성을 더해나가는 프로세스를 거치고, 실제 앱으로 구현되어 사용자가 사용하며 실질적인 가치를 창출하는 과정에 매료되었죠. 하지만 아쉽게도 해당 프로젝트는 앱개발 파트에서 기술적인 문제가 많아 결과가 그렇게 좋지는 못했습니다.
+
+<br />
+
+아래는 처음 미팅나갔던 당시 회의실에서 대기하다 심심해서 찍었던 사진입니다. (코로나 시절이었습니다.)
+
+<br />
+
+<img src="/public/images/contents/2024-12-31/meeting.jpeg" alt="미팅 때 개발자 분들과 같이 찍었던 셀카" width="1339" height="703" />
+
+<br />
+<br />
+
+이외에도 여러 프로젝트가 있었지만 돌아보면 클라이언트와 직접적으로 소통하며 문제를 분석하고, 그렇게 도출한 문제를 IT 기술을 통해 해결했을 때 일에서 보람을 많이 느꼈던 것 같습니다. 지금 생각해보면 디자인 일만 하지 않고 기획과 퍼블리싱 일도 종합적으로 했기에 가능했던 일들이었던 것 같네요. 하지만 회사에서는 한계가 명확했습니다. 아무리 기획을 하고 UI를 만들어도 기능이 없으면 쓰지를 못했죠. 기능을 직접 구현하지 못한다는 점이 너무 답답하기도 했고, 최종적으로는 혼자서도 애플리케이션을 온전히 만들어 낼 수 있는 사람이 되고 싶었기에 개발 직무에 도전하게 되었습니다.
+
 <br />
 <br />
 
